Fix inspection bugs

--- a/src/app/features/post-login/inspection/inspection-mytask/inspection-mytask.component.html
+++ b/src/app/features/post-login/inspection/inspection-mytask/inspection-mytask.component.html
@@ -1,3 +1,4 @@
+<p-toast position="top-right" key="my-task"></p-toast>
 <app-record-detail
   [canUploadDocument]="true"
   [canDeleteDocument]="true"
