Fix inspection bugs

--- a/src/app/features/post-login/inspection-plan/component/inspection-plan-inspector-list/inspection-plan-inspector-list.component.html
+++ b/src/app/features/post-login/inspection-plan/component/inspection-plan-inspector-list/inspection-plan-inspector-list.component.html
@@ -24,7 +24,7 @@
     </div>
     <div class="d-flex flex-column justify-content-between h-100">
       <div class="card mt-2 h-100">
-        <div class="scrollable-container overflow-auto d-flex flex-column justify-content-between h-100">
+        <div class="scrollable-container overflow-auto d-flex flex-column h-100">
           <ng-container *ngFor="let item of selectedInspectors; let i = index">
             <div *ngIf="selectedInspectors" class="mt-1 my-2">
               <div class="scrollview-item d-flex flex-row justify-content-between align-items-center p-2 h-full mx-1">
