--- a/src/app/features/post-login/user/user-detail/user-detail.component.html
+++ b/src/app/features/post-login/user/user-detail/user-detail.component.html
@@ -61,7 +61,7 @@
           </p>
         </div>
         <div class="mb-3">
-          <label class="span-heading-color">Trạng thái</label>
+          <label class="span-heading-color w-100">Trạng thái</label>
           <div class="mt-2">
             <p-tag
               [rounded]="true"
