--- a/src/app/features/post-login/user/user-update/user-update.component.html
+++ b/src/app/features/post-login/user/user-update/user-update.component.html
@@ -81,7 +81,7 @@
           </span>
           </div>
           <div class="col-md-8 mb-3">
-            <label class="span-heading-color mb-2">Trạng thái</label>
+            <label class="span-heading-color mb-2 w-100">Trạng thái</label>
             <p-dropdown [options]="statusOptions"
                         optionLabel="label"
                         formControlName="isActive"
