--- a/src/app/features/post-login/inspection/inspection-information/inspection-information.component.html
+++ b/src/app/features/post-login/inspection/inspection-information/inspection-information.component.html
@@ -1,4 +1,4 @@
-<div class="container-fluid mt-2">
+<div class="container-fluid mt-2 mb-1">
   <h5 class="mat-headline-5 mb-2">Chi tiết quyết định kiểm tra</h5>
   <div class="row">
     <div class="row" *ngIf="inspection">
@@ -29,7 +29,7 @@
         </div>
         <div class="row mb-2">
           <div class="col-md-3">
-            <label class="span-heading-color mb-2">Trạng thái</label>
+            <label class="span-heading-color mb-2 w-100">Trạng thái</label>
             <p-tag
               class="status"
               [severity]="getStatusSeverity(inspection.statusName)"
@@ -42,8 +42,8 @@
         <h6 class="mat-headline-6 mb-1">Tài liệu công văn</h6>
         <p-tabMenu [model]="tabs" [activeItem]="activeTab" class="mb-2"></p-tabMenu>
         <div class="file-item-container">
-          <div *ngIf="issueDocumentVisibility">
-            <div *ngFor="let doc of inspection.issueDocuments; let i = index" class="mb-2">
+          <div *ngIf="issueDocumentVisibility" class="h-100">
+            <div *ngFor="let doc of inspection.issueDocuments; let i = index" class="mt-2">
               <app-file-item [document]="inspection.issueDocuments[i]"></app-file-item>
             </div>
           </div>
