fix css update issue

--- a/src/app/features/post-login/issue/issue-detail/issue-detail.component.html
+++ b/src/app/features/post-login/issue/issue-detail/issue-detail.component.html
@@ -185,7 +185,7 @@
     <div class="col-md-4">
       <div class="list-inspector">
         <div class="list-inspector-header p-3 text-center">
-          <label class="fw-medium my-2 ">Danh sách thanh tra</label>
+          <label class="fw-medium my-2 font-size-18">Danh sách thanh tra</label>
           <div class="total">
             <span class="mx-auto">Tổng số: {{ issue.inspectors.length }}</span>
           </div>
