--- a/src/app/features/post-login/issue/update-issue/update-issue.component.html
+++ b/src/app/features/post-login/issue/update-issue/update-issue.component.html
@@ -374,7 +374,7 @@
     ></app-loading-complete-dialog>
     <div class="col-md-8 issue-content">
       <div class="mb-2 issue-name">
-        <span class="fw-medium">Tên kế hoạch</span>
+        <label class="fw-medium mb-1">Tên kế hoạch<span class="p-error">*</span></label>
         <input
           pInputText
           class="text-black-50 w-100"
@@ -389,7 +389,7 @@
         <!-- <pre>{{ issueForm.controls.name.errors | json }}</pre> -->
       </div>
       <div class="mb-2 issue-description">
-        <span class="fw-medium">Chi tiết</span>
+        <label class="fw-medium mb-1">Chi tiết<span class="p-error">*</span></label>
         <textarea
           pInputTextarea
           class="text-black-50 w-100"
@@ -406,7 +406,6 @@
       <div class="">
         <h6 class="mb-2 mat-headline-6">Tài liệu công văn</h6>
         <button
-          class="mb-3"
           type="button"
           pButton
           (click)="togglePopupInvalidDoc()"
@@ -551,7 +550,7 @@
     <div class="col-md-4">
       <div class="list-inspector">
         <div class="list-inspector-header p-3 text-center">
-          <h6 class="mat-headline-6 mx-auto">Danh sách thanh tra</h6>
+          <label class="fw-medium my-2 font-size-18">Danh sách thanh tra</label>
           <div class="total">
             <span class="mx-auto">Tổng số: {{ issue.inspectors.length }}</span>
             <div *ngIf="isChanged"></div>
@@ -579,7 +578,7 @@
                     }}</span>
                     <br/>
                     <span>
-                    {{ item.roles[0].roleName }}-
+                    {{ item.roles[0].roleName }} -
                       {{ item.school.schoolName }}
                   </span>
                   </div>
@@ -613,7 +612,7 @@
             <button pButton (click)="toggleStatus()">Thay đổi</button>
           </div>
           <div
-            class="bottom-item d-flex justify-content-between"
+            class="bottom-item d-flex justify-content-between align-items-center"
             *ngIf="isChanged"
           >
             <button pButton class="cancel" (click)="toggleCancel()">Hủy</button>
@@ -631,7 +630,7 @@
         </div>
       </div>
     </div>
-    <div class="col-md-12 text-center">
+    <div class="col-md-12 text-center mb-2">
       <button class="mt-3" pButton>Cập nhật kế hoạch</button>
     </div>
   </form>
