--- a/src/app/features/post-login/inspection-plan/inspection-plan-list/inspection-plan-list.component.html
+++ b/src/app/features/post-login/inspection-plan/inspection-plan-list/inspection-plan-list.component.html
@@ -288,23 +288,37 @@
           ></p-tag>
         </td>
         <td class="py-3 px-2">
-          <div class="d-flex justify-content-between align-items-center">
-            <button
-              class="action-button"
-              type="button"
-              (click)="onInspectingDetail(plan.inspectionPlanId)"
-            >
-              <i class="bi bi-info-square"></i>
-            </button>
-
+          <div class="d-flex align-items-center" [class.justify-content-evenly]="plan.status.value == 23" [class.justify-content-between]="plan.status.value != 23">
             <button
               class="action-button"
               type="button"
               (click)="onDetail(plan.inspectionPlanId)"
+              pTooltip="Chi tiết"
+              tooltipPosition="top"
             >
               <i class="bi bi-info-circle-fill"></i>
             </button>
 
+            <button
+              *ngIf="plan.status.value != 23"
+              class="action-button"
+              type="button"
+              (click)="onUpdate(plan.inspectionPlanId)"
+              pTooltip="Chỉnh sửa"
+              tooltipPosition="top"
+            >
+              <i class="bi bi-pencil-fill"></i>
+            </button>
+
+            <button
+              class="action-button"
+              type="button"
+              (click)="onInspectingDetail(plan.inspectionPlanId)"
+              pTooltip="Phiên thanh tra"
+              tooltipPosition="left"
+            >
+              <i class="bi bi-info-square"></i>
+            </button>
           </div>
         </td>
       </tr>
