Fix inspection bugs

--- a/src/app/features/post-login/inspection/inspection-document/inspection-document.component.html
+++ b/src/app/features/post-login/inspection/inspection-document/inspection-document.component.html
@@ -101,7 +101,7 @@
                     class="create-button ms-2"
                     pButton
                     (click)="changeCreateRecordVisible()"
-                    *ngIf="inspectionDocument.isChief"
+                    *ngIf="inspectionDocument.isChief && inspectionDocument.canCreateTask"
                   >
                     Tạo mới
                   </button>
