fix excel user and excel school

--- a/src/app/features/post-login/issue/create-issue/create-issue.component.html
+++ b/src/app/features/post-login/issue/create-issue/create-issue.component.html
@@ -89,7 +89,7 @@
           </div>
         </div>
         <div class="col-md-6 mb-2">
-          <label class="fw-medium mb-1">Hạn nộp<span class="p-error">*</span></label>
+          <label class="fw-medium mb-1">Hạn nộp kế hoạch thực hiện<span class="p-error">*</span></label>
           <tui-input-date
             tuiUnfinishedValidator="Vui lòng chọn hạn nộp"
             [min]="tomorrow"
