--- a/src/app/features/post-login/inspection-plan/component/inspection-plan-inspector-list/inspection-plan-inspector-list.component.html
+++ b/src/app/features/post-login/inspection-plan/component/inspection-plan-inspector-list/inspection-plan-inspector-list.component.html
@@ -12,7 +12,7 @@
 ></p-confirmDialog>
 <div *ngIf="selectedInspectors && selectedInspectors.length == 0 && listEditable && createButton; else inspectorList"
      class="text-center">
-  <button type="button" pButton class="create-inspector" (click)="changeInspectorVisible()">Tạo ban KTNB</button>
+  <button type="button" pButton class="create-inspector" (click)="changeInspectorVisible()">Tạo ban kiểm tra</button>
 </div>
 <ng-template #inspectorList>
   <div class="list-inspector h-100 d-flex flex-column">
