fix update issue

--- a/src/app/features/post-login/issue/update-issue/update-issue.component.html
+++ b/src/app/features/post-login/issue/update-issue/update-issue.component.html
@@ -127,12 +127,12 @@
                 </div>
               </th>
               <th
-                pSortField="roles[0].roleName"
-                pSortableColumn="roles[0].roleName"
+                pSortField="roleName"
+                pSortableColumn="roleName"
               >
                 <div>
                   Chức vụ
-                  <p-sortIcon field="roles[0].roleName"></p-sortIcon>
+                  <p-sortIcon field="roleName"></p-sortIcon>
                 </div>
               </th>
               <th pSortableColumn="school.schoolName">
