Fix inspector list UX UI

--- a/src/app/features/post-login/guidance-document/guidance-document-create/guidance-document-create.component.html
+++ b/src/app/features/post-login/guidance-document/guidance-document-create/guidance-document-create.component.html
@@ -237,16 +237,10 @@
       </div>
     </div>
 
-    <div class="m-2" >
-      <button pButton type="submit" (click)="confirm()">Tạo mới</button>
+    <div class="mt-4 col-md-12 text-center" >
+      <button pButton type="submit" (click)="confirm()">Tạo mới văn bản</button>
     </div>
   </form>
-  <!--<div class="overlay" *ngIf="isLoading">-->
-  <!--  <div class="spinner-container">-->
-  <!--    <div class="spinner-border" role="status"></div>-->
-  <!--  </div>-->
-  <!--</div>-->
-
   <p-toast position="top-right" key="toastGuidanceDocumentCreate"></p-toast>
   <p-confirmDialog
     key="confirmGuidanceDocumentCreate"
