--- a/src/app/features/post-login/inspection-plan/inspection-plan-detail/inspection-plan-detail.component.html
+++ b/src/app/features/post-login/inspection-plan/inspection-plan-detail/inspection-plan-detail.component.html
@@ -143,6 +143,7 @@
       <div class="col-md-4 d-flex justify-content-center h-100">
         <app-inspection-plan-inspector-list
           class="w-100 h-100"
+          [screen]="'detail'"
           [selectedInspectors]="inspectionPlanDetail.inspectors"
         ></app-inspection-plan-inspector-list>
       </div>
