--- a/src/app/features/post-login/inspection/inspection-information/inspection-information.component.html
+++ b/src/app/features/post-login/inspection/inspection-information/inspection-information.component.html
@@ -58,6 +58,7 @@
       <div class="col-md-4 d-flex justify-content-center h-100">
         <app-inspection-plan-inspector-list
           class="w-100 h-100"
+          [screen]="issueDocumentVisibility ? 'inspection-information' : 'detail'"
           [listEditable]="false"
           [selectedInspectors]="inspection.inspectorDtos">
         </app-inspection-plan-inspector-list>
