--- a/src/app/components/user-profile/user-profile.component.scss
+++ b/src/app/components/user-profile/user-profile.component.scss
@@ -58,3 +58,13 @@
 .user-name{
 font-size: 1.7rem;
 }
+
+:host ::ng-deep .p-dialog-footer {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  .p-button {
+    margin-left: 30px;
+    width: 150px;
+  }
+}
