Token expire error

--- a/src/app/features/login/login-base/login-base.component.html
+++ b/src/app/features/login/login-base/login-base.component.html
@@ -1,5 +1,5 @@
+<p-toast  key="login-base" position="top-right"></p-toast>
 <div class="container-fluid min-vh-100 outer-box d-flex justify-content-center align-items-center">
-  <p-toast></p-toast>
   <div class="container-fluid inner-box rounded-3 h-75">
     <div class="row">
       <div class="col py-3 pe-4 ms-5 me-4 mt-5">
