Update inspection plan status

--- a/src/app/features/post-login/inspection/record/update-record/update-record.component.html
+++ b/src/app/features/post-login/inspection/record/update-record/update-record.component.html
@@ -3,7 +3,7 @@
 <p-dialog header="Danh sách đoàn kiểm tra"
           [(visible)]="updateRecordPopupVisible"
           [modal]="true"
-          [style]="{ width: '60%' }"
+          [style]="{ width: '50%', height: '63vh'}"
           [draggable]="false"
           [resizable]="false"
           (onHide)="resetUpdateRecordPopupVisible()"
@@ -90,7 +90,7 @@
         </div>
       </div>
     </div>
-    <div class="mt-5 mb-3 row w-100">
+    <div class="mt-3 row w-100">
       <div class="col-12 save-button d-flex w-100 justify-content-center">
         <button class="btn text-white">Cập nhật</button>
       </div>
