--- a/src/app/features/post-login/issue/update-issue/update-issue.component.html
+++ b/src/app/features/post-login/issue/update-issue/update-issue.component.html
@@ -44,9 +44,12 @@
           [rows]="5"
           [showCurrentPageReport]="true"
           [paginator]="true"
-          currentPageReportTemplate="Hiển thị từ {first} tới {last} trên tổng {totalRecords} bản ghi"
           [filterDelay]="0"
-          [globalFilterFields]="['user.fullName ', 'roleName', 'school.schoolName']"
+          [globalFilterFields]="[
+        'user.fullName',
+        'roleName',
+        'school.schoolName'
+      ]"
         >
           <ng-template pTemplate="caption">
             <div
