Fix inspection plan bugs

--- a/src/app/features/post-login/inspection-plan/component/inspection-plan-inspector-list/inspection-plan-inspector-list.component.html
+++ b/src/app/features/post-login/inspection-plan/component/inspection-plan-inspector-list/inspection-plan-inspector-list.component.html
@@ -62,7 +62,7 @@
           </ng-container>
         </div>
       </div>
-      <div class="w-100 d-flex justify-content-center my-1" *ngIf="listEditable && selectedInspectors.length > 0">
+      <div class="w-100 d-flex justify-content-center my-1" *ngIf="listEditable && selectedInspectors && selectedInspectors.length > 0">
         <div *ngIf="toggleChange">
           <button type="button" pButton class="create-inspector"
                   (click)="changeToggleStatus()">Chỉnh sửa ban KTNB
