--- a/src/app/features/post-login/inspection-plan/update-inspection-plan/update-inspection-plan.component.html
+++ b/src/app/features/post-login/inspection-plan/update-inspection-plan/update-inspection-plan.component.html
@@ -5,6 +5,12 @@
         rejectLabel="Hủy bỏ"
         key="changeTime"
 ></p-confirmDialog>
+<p-confirmDialog
+        [style]="{width: '50vw'}"
+        acceptLabel="Xác nhận"
+        rejectLabel="Hủy bỏ"
+        key="update"
+></p-confirmDialog>
 <p-dialog
         header="Xem tài liệu"
         [(visible)]="pdfPreviewVisibility"
