--- a/src/app/features/post-login/inspection-plan/create-inspection-plan/create-inspection-plan.component.html
+++ b/src/app/features/post-login/inspection-plan/create-inspection-plan/create-inspection-plan.component.html
@@ -291,6 +291,7 @@
           </div>
           <div class="col-md-4 mh-100">
             <app-inspection-plan-inspector-list
+              [screen]="'update'"
               class="w-100"
               [popup]="false"
               [listEditable]="true"
