Add inspection task and document status

--- a/src/app/features/post-login/inspection/inspection-mytask/inspection-mytask.component.html
+++ b/src/app/features/post-login/inspection/inspection-mytask/inspection-mytask.component.html
@@ -105,6 +105,12 @@
               <p-sortIcon field="deadline"></p-sortIcon>
             </div>
           </th>
+          <th pSortableColumn="status.statusId">
+            <div>
+              Trạng thái
+              <p-sortIcon field="status.statusId"></p-sortIcon>
+            </div>
+          </th>
           <th class="th-small"></th>
         </tr>
       </ng-template>
@@ -125,6 +131,13 @@
           <td>
             <span class="p-column-title">Ngày nộp</span>
             {{ taskList.deadline | date : "dd/MM/yyyy" }}
+          </td>
+          <td>
+            <span class="p-column-title">Trạng thái</span>
+            <p-tag
+              [severity]="getStatusSeverity(taskList?.status?.statusId)"
+              [value]="taskList?.status?.statusName"
+            ></p-tag>
           </td>
           <td
             style="text-align: center"
