--- a/src/app/features/post-login/inspection/inspection-mytask/inspection-mytask.component.scss
+++ b/src/app/features/post-login/inspection/inspection-mytask/inspection-mytask.component.scss
@@ -6,6 +6,11 @@
 .th-small {
   width: 100px;
 }
+
+:host ::ng-deep .p-tag {
+  border-radius: 20px;
+}
+
 .p-button {
   background-color: $primary;
   border-radius: 8px;
