Fix inspection plan inspector list bugs

--- a/src/app/features/post-login/inspection-plan/component/inspection-plan-inspector-list/inspection-plan-inspector-list.component.html
+++ b/src/app/features/post-login/inspection-plan/component/inspection-plan-inspector-list/inspection-plan-inspector-list.component.html
@@ -53,7 +53,7 @@
                   </div>
                 </div>
                 <div class="" *ngIf="deleteButtonVisibility">
-                  <button type="button" class="delete-button" (click)="onDeleteInspector(i)">
+                  <button type="button" class="delete-button" (click)="onDeleteInspector(i, item.user.fullName)">
                     <i class="bi bi-trash-fill"></i>
                   </button>
                 </div>
